<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.sonar.samples.openapi</groupId>
  <artifactId>dosonarapi-community</artifactId>
  <version>1.0.0</version>
  <packaging>sonar-plugin</packaging>

  <name>SonarQube OpenAPI Custom Rules Example</name>
  <description>OpenAPI Custom Rules Example for SonarQube</description>
  <inceptionYear>2018</inceptionYear>

  <properties>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <sonar.version>8.7.0.41497</sonar.version>
    <sonarQubeMinVersion>6.7</sonarQubeMinVersion>
    <sonaropenapi.version>1.0.0</sonaropenapi.version>
    <sonaranalyzer.version>1.22.0.848</sonaranalyzer.version>
    <orgjson.version>20220320</orgjson.version>
    <junit.version>4.13.2</junit.version>
    <assertj.version>3.22.0</assertj.version>

    <jacoco.maven.plugin.version>0.8.6</jacoco.maven.plugin.version>
    <sonar.maven.plugin.version>3.7.0.1746</sonar.maven.plugin.version>
    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
    <sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPaths>
    <sonar.language>java</sonar.language>
  </properties>


  <dependencies>
    <dependency>
      <groupId>org.apiaddicts.apitools.dosonarapi</groupId>
      <artifactId>openapi-front-end</artifactId>
      <version>${sonaropenapi.version}</version>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.sonarqube</groupId>
      <artifactId>sonar-plugin-api</artifactId>
      <version>${sonar.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.sonarsource.analyzer-commons</groupId>
      <artifactId>sonar-analyzer-commons</artifactId>
      <version>${sonaranalyzer.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>${orgjson.version}</version>
    </dependency>

    <!-- test dependencies -->
    <dependency>
      <groupId>org.apiaddicts.apitools.dosonarapi</groupId>
      <artifactId>openapi-test-tools</artifactId>
      <version>${sonaropenapi.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
        <artifactId>sonar-packaging-maven-plugin</artifactId>
        <version>1.17</version>
        <extensions>true</extensions>
        <configuration>
          <pluginKey>openapi-custom</pluginKey>
          <pluginName>OpenAPI Custom</pluginName>
          <pluginClass>org.sonar.samples.openapi.OpenAPICustomPlugin</pluginClass>
          <skipDependenciesPackaging>true</skipDependenciesPackaging>
          <sonarLintSupported>true</sonarLintSupported>
          <sonarQubeMinVersion>${sonarQubeMinVersion}</sonarQubeMinVersion>
          <basePlugin>openapi</basePlugin>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <shadedArtifactAttached>false</shadedArtifactAttached>
              <createDependencyReducedPom>false</createDependencyReducedPom>
              <minimizeJar>true</minimizeJar>
              <filters>
                <filter>
                  <artifact>jaxen:jaxen</artifact>
                  <includes>
                    <include>**</include>
                  </includes>
                </filter>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/LICENSE*</exclude>
                    <exclude>META-INF/NOTICE*</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>LICENSE*</exclude>
                    <exclude>NOTICE*</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.maven.plugin.version}</version>
        <configuration>
          <destFile>${sonar.jacoco.reportPaths}</destFile>
          <append>true</append>
        </configuration>
        <executions>
          <execution>
            <id>agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
